# Sentinel-Chain

./: .env.example  .gitignore  Dockerfile  Launch-Auto-Crypto.bat  Launch-Auto-Crypto.ps1  Launch-Sentinel-Chain.bat  Launch-Sentinel-Chain.ps1  README.md  install-macos.sh  pyproject.toml  windows_entrypoint.py
.github/workflows/: build.yml  edge-strategy.yml
docs/: auto_charting_war_room.md  chrome-discord-bridge.md  futures_brokerage_research.md  sentinel-pulse-bracket-migration.md
scripts/: operator_ui_smoke.py
src/autocrypto/: __init__.py  __main__.py  app.py  backtest.py  (+16 more)
tests/: test_advisory_risk.py  test_app.py  test_app_persistence.py  test_approvals.py  test_bitunix_adapter.py  test_bitunix_futures_execution.py  test_bracket_templates.py  test_chrome_discord_bridge.py  test_config.py  test_control.py  test_cross_bot_event_bus.py  test_edge_strategy.py  test_engine.py  test_exchange_adapter_status.py  test_exchange_capabilities.py  test_exchange_state_helpers.py  test_exit_triggers.py  test_futures_native_plan.py  test_futures_risk.py  test_idempotency.py  test_market_price_api.py  test_market_state.py  test_operator_ui.py  test_order_planner.py  test_platform_registry.py  test_portfolio.py  test_positions_api.py  test_protections.py  test_repository.py  test_risk.py  test_risk_previews_api.py  test_runtime_controls_api.py  test_runtime_state.py  test_scalper.py  test_scalper_api.py  test_scalper_state_api.py  test_signals.py  test_strategy_presets.py  test_text_signal_api.py  test_text_signals.py  (+6 more)
ui-prototypes/: README.md  app.js  index.html  styles.css
(+67 files in other folders)
