[project]
name = "auto-crypto"
version = "0.1.0"
description = "Discord and webhook controlled crypto trading automation with paper-first execution."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "discord.py>=2.4",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
exchange = ["ccxt>=4.0"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.setuptools.package-data]
autocrypto = ["static/**/*"]
